# autorl-harness

./: .env.example  .gitignore  README.md  bootstrap.py  enjoy.py  main.py  project.md  pyproject.toml  requirements.txt  rocket_env.py  test_env.py  train_ppo.py  visualize.py
autorl/: loop.sh  program.md  prompt.md
autorl/src/autorl/: __init__.py  cli.py  evaluator.py  manager.py  planner.py  registry.py  runner.py  schemas.py
autorl/tasks/: __init__.py
autorl/tasks/rocket/: __init__.py  env.py  program.md  reward.py  spec.yaml  task.py  train.py
autorl/tasks/template/: program.md  spec.yaml
