[project]
name = "autorl-harness"
version = "0.1.0"
description = "Autonomous RL experiment loop powered by an LLM agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "pyyaml>=6.0",
    "stable-baselines3>=2.7.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
